ajout form-label et remplacé form-group par mb-3

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
         "dom": '<"toolbar">lftip',
         fnInitComplete: function(){
             $('div.toolbar').html(
-            	'<label for="avecEssaim">Avec Essaim</label> <input type="checkbox" id="avecEssaim"/> ');
+            	'<label class="form-label" for="avecEssaim">Avec Essaim</label> <input type="checkbox" id="avecEssaim"/> ');
             $("#avecEssaim").click(function() {
             	table.draw();
         	});
@@ -63,7 +63,7 @@ $(document).ready(function() {
 		<h6 th:if="${rucheEssaim}" th:text="#{essaimdanslaruche}+' '+${rucheEssaim.nom}"></h6>
 		<h6 th:text="#{mettreessaimdanslaruche}"></h6>
 		<!-- 
-		<input type="checkbox" name="avecEssaim" id="avecEssaim" /> <label for="avecEssaim" th:text="#{AvecEssaim}"></label>
+		<input type="checkbox" name="avecEssaim" id="avecEssaim" /> <label class="form-label" for="avecEssaim" th:text="#{AvecEssaim}"></label>
 		 -->
 		<table class="table table-bordered" id="associerRucheEssaim" >
 			<thead>
