--- a/src/main/resources/templates/passwordResetForm.html
+++ b/src/main/resources/templates/passwordResetForm.html
@@ -10,13 +10,13 @@
 <body>        
 	<br />
 	<form th:action="@{/resetPassword}" method="post" id="resetPassword">
-		<div class="form-group">
-			<label for="email" th:text="#{email}"></label> 
+		<div class="mb-3">
+			<label class="form-label" for="email" th:text="#{email}"></label> 
 			<input
 				type="text" class="form-control" id="email" name="email" />
 		</div>
 		<br/>
-		<div class="form-group">
+		<div class="mb-3">
 			<input class="btn btn-primary" type="submit" th:value="#{resetPassword}" />
 		</div>
 	</form>
