--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -11,13 +11,13 @@
 	<br />
 	<form th:action="@{/resetPasswordFin}" method="post" id="resetPasswordFin">
 		<input type="hidden" id="token" name="token" th:value="${token}" />
-		<div class="form-group">
-			<label for="password" th:text="#{motDePasse}"></label> 
+		<div class="mb-3">
+			<label class="form-label" for="password" th:text="#{motDePasse}"></label> 
 			<input
 				 type="password" class="form-control" id="password" name="password" value="" />
 		</div>
 		<br/>
-		<div class="form-group">
+		<div class="mb-3">
 			<input class="btn btn-primary" type="submit" th:value="#{resetPassword}" />
 		</div>
 	</form>
