--- a/src/main/resources/templates/essaim/essaimEssaimerForm.html
+++ b/src/main/resources/templates/essaim/essaimEssaimerForm.html
@@ -50,8 +50,8 @@
 		th:action="@{'/essaim/essaime/sauve/' + ${essaim.id}}"
 		method="post" id="essaimeForm">
 		<div th:replace="includeForm :: date"></div>
-		<div class="form-group">
-			<label for="nom" th:text="#{NomNouvelEssaim}"></label>
+		<div class="mb-3">
+			<label class="form-label" for="nom" th:text="#{NomNouvelEssaim}"></label>
 			<input class="form-control" type="text" 
 				id="nom" name="nom"	maxlength="92" />
 		</div>
