--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -58,34 +58,34 @@
 		method="post" id="essaimForm">
 		<input class="form-control" type="hidden" th:field="*{id}" />
 		<div th:insert="includeForm :: nomField"></div>
-		<div class="form-check">
+		<div class="mb-3 form-check">
 			<input class="form-check-input" type="checkbox"
 				th:field="*{reineMarquee}" /> <label class="form-check-label"
 				for="reineMarquee" th:text="#{reineMarquee}"></label>
 		</div>
-		<div class="form-group">
-			<label th:text="#{reineDateNaissance}" for="reineDateNaissance"></label>
+		<div class="mb-3">
+			<label class="form-label" th:text="#{reineDateNaissance}" for="reineDateNaissance"></label>
 			<input class="form-control" type="text"
 				th:field="*{reineDateNaissance}" th:errorclass="fieldError" />
 		</div>
 		<div th:insert="includeForm :: actifField"></div>
 		<div th:insert="includeForm :: dateAcquisitionField"></div>
 		<div th:insert="includeForm :: commentaireField"></div>
-		<div class="form-group">
-			<label for="essaim" th:text="#{souche}"></label> <select
+		<div class="mb-3">
+			<label class="form-label" for="essaim" th:text="#{souche}"></label> <select
 				class="form-control" th:field="*{souche}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group">
-			<label th:text="#{agressivite}" for="agressivite"></label> 
+		<div class="mb-3">
+			<label class="form-label" th:text="#{agressivite}" for="agressivite"></label> 
 			<input class="form-control" type="number" min="1" max="5" 
 				th:field="*{agressivite}" />
 		</div>
-		<div class="form-group">
-			<label th:text="#{proprete}" for="proprete"></label> 
+		<div class="mb-3">
+			<label class="form-label" th:text="#{proprete}" for="proprete"></label> 
 			<input class="form-control" type="number" min="1" max="5"
 				th:field="*{proprete}" />
 		</div>
