--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -56,39 +56,39 @@
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" />
 		<div th:insert="includeForm :: dateField"></div>
-		<div class="form-group">
-			<label for="typeEvenement" th:text="#{typeEvenement}"></label> <select
+		<div class="mb-3">
+			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label> <select
 				class="form-control" th:field="*{type}">
 				<option
 					th:each="typeEvenement : ${T(ooioo.ruches.evenement.TypeEvenement).values()}"
 					th:value="${typeEvenement}" th:text="#{${typeEvenement}}"></option>
 			</select>
 		</div>
-		<div class="form-group ruches">
-			<label for="ruche" th:text="#{ruche}"></label> <select
+		<div class="mb-3 ruches">
+			<label class="form-label" for="ruche" th:text="#{ruche}"></label> <select
 				class="form-control" th:field="*{ruche}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="rucheopt : ${ruches}" th:value="${rucheopt.id}"
 					th:text="${rucheopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group ruches">
-			<label for="essaim" th:text="#{essaim}"></label> <select
+		<div class="mb-3 ruches">
+			<label class="form-label" for="essaim" th:text="#{essaim}"></label> <select
 				class="form-control" th:field="*{essaim}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group ruches">
-			<label for="rucher" th:text="#{rucher}"></label> <select
+		<div class="mb-3 ruches">
+			<label class="form-label" class="form-label" for="rucher" th:text="#{rucher}"></label> <select
 				class="form-control" th:field="*{rucher}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
 					th:text="${rucheropt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group ruches">
+		<div class="mb-3 ruches">
 			<label for="hausse" th:text="#{hausse}"></label> <select
 				class="form-control" th:field="*{hausse}">
 				<option th:text="#{aucune}" value=""></option>
@@ -96,8 +96,8 @@
 					th:text="${hausseopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group">
-			<label for="valeur" th:text="#{valeur}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="valeur" th:text="#{valeur}"></label> <input
 				class="form-control" type="number" step="0.001"
 				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
 		</div>
