--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -81,18 +81,18 @@
 		<div th:insert="includeForm :: nomField"></div>
 		<div th:insert="includeForm :: activeField"></div>
 		<div th:insert="includeForm :: dateAcquisitionField"></div>
-		<div class="form-group">
-			<label for="poidsVide" th:text="#{poidskg}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="poidsVide" th:text="#{poidskg}"></label> <input
 				class="form-control" type="number" step="0.001" min="0" max="20"
 				th:field="*{poidsVide}" th:errorclass="fieldError" />
 		</div>
-		<div class="form-group">
-			<label for="nbCadres" th:text="#{nombredecadres}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="nbCadres" th:text="#{nombredecadres}"></label> <input
 				class="form-control" type="number" th:field="*{nbCadres}"
 				th:errorclass="fieldError" />
 		</div>
-		<div class="form-group">
-			<label for="nbCadresMax" th:text="#{nombredecadresmax}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="nbCadresMax" th:text="#{nombredecadresmax}"></label> <input
 				class="form-control" type="number" th:field="*{nbCadresMax}"
 				th:errorclass="fieldError" />
 		</div>
