--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -23,13 +23,13 @@
 				name="finTraitement" /> <label class="form-check-label"
 				for="finTraitement" th:text="#{finTraitement}"></label>
 		</div>
-		<div th:fragment="poidskg" class="form-group">
-			<label th:text="#{poidskg}" for="valeur"></label> <input
+		<div th:fragment="poidskg" class="mb-3">
+			<label class="form-label" th:text="#{poidskg}" for="valeur"></label> <input
 				class="form-control" type="number" step="0.001" id="valeur"
 				name="valeur" />
 		</div>
-		<div th:fragment="nomField" class="form-group">
-			<label for="nom" th:text="#{nom}"></label> <input
+		<div th:fragment="nomField" class="mb-3">
+			<label class="form-label" for="nom" th:text="#{nom}"></label> <input
 				class="form-control" type="text" th:field="*{nom}"
 				maxlength="92" th:errorclass="fieldError" />
 		</div>
@@ -41,45 +41,45 @@
 			<input class="form-check-input" type="checkbox" th:field="*{actif}" />
 			<label class="form-check-label" for="actif" th:text="#{actif}"></label>
 		</div>
-		<div th:fragment="date" class="form-group">
-			<label for="date" th:text="#{date}"></label> <input
+		<div th:fragment="date" class="mb-3">
+			<label class="form-label" for="date" th:text="#{date}"></label> <input
 				class="form-control datepicker" type="text" id="date"
 				name="date"
 				th:value="${#temporals.format(date, 'yyyy/MM/dd HH:mm')}" />
 		</div>
-		<div th:fragment="dateField" class="form-group">
-			<label for="date" th:text="#{date}"></label> <input
+		<div th:fragment="dateField" class="mb-3">
+			<label class="form-label" for="date" th:text="#{date}"></label> <input
 				class="form-control datepicker" type="text"
 				th:field="*{date}" th:errorclass="fieldError" />
 		</div>
-		<div th:fragment="dateAcquisitionField" class="form-group">
-			<label th:text="#{dateAcquisition}" for="dateAcquisition"></label> <input
+		<div th:fragment="dateAcquisitionField" class="mb-3">
+			<label class="form-label" th:text="#{dateAcquisition}" for="dateAcquisition"></label> <input
 				class="form-control" type="text" th:field="*{dateAcquisition}"
 				th:errorclass="fieldError" />
 		</div>
-		<div th:fragment="commentaireField" class="form-group">
-			<label th:text="#{commentaire}" for="commentaire"></label><br />
+		<div th:fragment="commentaireField" class="mb-3">
+			<label class="form-label" th:text="#{commentaire}" for="commentaire"></label><br />
 			<textarea class="form-control" th:field="*{commentaire}"
 				th:errorclass="fieldError" maxlength="255"></textarea>
 		</div>
-		<div th:fragment="commentaire" class="form-group">
-			<label for="commentaire" th:text="#{commentaire}"></label>
+		<div th:fragment="commentaire" class="mb-3">
+			<label class="form-label" for="commentaire" th:text="#{commentaire}"></label>
 			<textarea class="form-control" id="commentaire" name="commentaire"
 				cols="35"></textarea>
 		</div>
-		<div th:fragment="latitudeField" class="form-group">
-			<label for="latitude" th:text="#{latitude}"></label>
+		<div th:fragment="latitudeField" class="mb-3">
+			<label class="form-label" for="latitude" th:text="#{latitude}"></label>
 			<input class="form-control" 
 				type="number" step="any" min="-90" max="90"
 				th:field="*{latitude}" th:errorclass="fieldError" />
 		</div>
-		<div th:fragment="longitudeField" class="form-group">
-			<label for="longitude" th:text="#{longitude}"></label>
+		<div th:fragment="longitudeField" class="mb-3">
+			<label class="form-label" for="longitude" th:text="#{longitude}"></label>
 			<input class="form-control"
 				type="number" step="any" min="-180" max="180"
 				th:field="*{longitude}" th:errorclass="fieldError" />
 		</div>
-		<div th:fragment="BtnForm" class="form-group">
+		<div th:fragment="BtnForm" class="mb-3">
 			<input class="btn btn-primary" type="submit"
 				th:value="#{enregistrer}" /> <input class="btn btn-primary"
 				type="reset" th:value="#{reinitialiser}" />
