--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,12 +27,12 @@
 	<div th:if="${param.logout}" th:text="#{deconnecte}"></div>
 	<br />
 	<form th:action="@{/login}" method="post">
-		<div class="form-group">
-			<label for="username" th:text="#{nomUtilisateur}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="username" th:text="#{nomUtilisateur}"></label> <input
 				type="text" class="form-control" id="username" name="username" />
 		</div>
-		<div class="form-group">
-			<label for="password" th:text="#{motDePasse}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="password" th:text="#{motDePasse}"></label> <input
 				type="password" class="form-control" id="password" name="password" />
 		</div>
 		<div class="form-check">
@@ -42,7 +42,7 @@
 				th:text="#{affichermotdepasse}"></label>
 		</div>
 		<br />
-		<div class="form-group">
+		<div class="mb-3">
 			<input class="btn btn-primary" type="submit" th:value="#{connexion}" />
 		</div>
 	</form>
