--- a/src/main/resources/templates/parametresForm.html
+++ b/src/main/resources/templates/parametresForm.html
@@ -21,8 +21,8 @@
 			<input class="form-check-input" type="checkbox" id="voirLatLon" name="voirLatLon" />
 			<label class="form-check-label" for="voirLatLon" th:text="#{voirLatLon}"></label>
 		</div>
-		<div class="form-group">
-			<label for="date" th:text="#{datedecalee}"></label>
+		<div class="mb-3">
+			<label class="form-label" for="date" th:text="#{datedecalee}"></label>
 			<input class="form-control datepicker" type="text" id="date" name="date" />
 		</div>
 		<br/>
