--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -43,36 +43,36 @@
 		<input type="hidden" th:field="*{id}" /> 
 		<input type="hidden" sec:authorize="!hasRole('ROLE_admin')" th:field="*{roles}" /> 
 		<div th:insert="includeForm :: nomField"></div>
-		<div class="form-group">
-			<label th:text="#{prenom}" for="prenom"></label>
+		<div class="mb-3">
+			<label class="form-label" th:text="#{prenom}" for="prenom"></label>
 			<input class="form-control" type="text" th:field="*{prenom}"
 				th:errorclass="fieldError" maxlength="35" />
 		</div>
-		<div class="form-group">		
-			<label th:text="#{email}" for="email"></label>
+		<div class="mb-3">		
+			<label class="form-label" th:text="#{email}" for="email"></label>
 			<input class="form-control"
 				type="text" th:field="*{email}" th:errorclass="fieldError" maxlength="255" />
 		</div>
-		<div class="form-group">					
-			<label th:text="#{adresse}" for="adresse"></label>
+		<div class="mb-3">					
+			<label class="form-label" th:text="#{adresse}" for="adresse"></label>
 			<input
 				class="form-control" type="text" th:field="*{adresse}"
 				th:errorclass="fieldError" maxlength="255" />
 		</div>
-		<div class="form-group">					
-			<label th:text="#{login}" for="login"></label>
+		<div class="mb-3">					
+			<label class="form-label" th:text="#{login}" for="login"></label>
 			<input
 				class="form-control" type="text" th:field="*{login}"
 				th:errorclass="fieldError" maxlength="35" />
 		</div>
-		<div class="form-group">					
-			<label th:text="#{motDePasse}" for="password"></label>
+		<div class="mb-3">					
+			<label class="form-label" th:text="#{motDePasse}" for="password"></label>
 			<input
 				class="form-control" type="password" th:field="*{password}"
 				th:errorclass="fieldError" maxlength="35" />
 		</div>
-		<div class="form-group" sec:authorize="hasRole('ROLE_admin')">					
-			<label th:text="#{roles}" for="roles"></label>
+		<div class="mb-3" sec:authorize="hasRole('ROLE_admin')">					
+			<label class="form-label" th:text="#{roles}" for="roles"></label>
 			<input
 				class="form-control" type="text" th:field="*{roles}"
 				th:errorclass="fieldError" maxlength="35" />
