--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -60,38 +60,38 @@
 		th:object="${detailRecolte}" method="post" id="recolteHausseForm">
 		<input type="hidden" th:field="*{id}" /> <input type="hidden"
 			th:field="*{recolte}" /> <input type="hidden" th:field="*{hausse}" />
-		<div class="form-group">
-			<label th:text="#{poidsAvant}" for="poidsAvant"></label>
+		<div class="mb-3">
+			<label class="form-label" th:text="#{poidsAvant}" for="poidsAvant"></label>
 			<input class="form-control" 
 				type="number" th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
 				th:field="*{poidsAvant}" th:errorclass="fieldError" />
 		</div>
-		<div class="form-group">
-			<label th:text="#{poidsApres}" for="poidsApres"></label>
+		<div class="mb-3">
+			<label class="form-label" th:text="#{poidsApres}" for="poidsApres"></label>
 			<input class="form-control" 
 				type="number" th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
 				th:field="*{poidsApres}" th:errorclass="fieldError" />
 		</div>
 		<button type="button" id="toggleplus" th:text="#{plus}" ></button>
 		<br/><br/>
-		<div class="form-group toggleplus">
-			<label for="essaim" th:text="#{essaim}"></label> <select
+		<div class="mb-3 toggleplus">
+			<label class="form-label" for="essaim" th:text="#{essaim}"></label> <select
 				class="form-control" th:field="*{essaim}">
 				<option value="" th:text="#{aucun}">;</option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group toggleplus">
-			<label for="ruche" th:text="#{ruche}"></label> <select
+		<div class="mb-3 toggleplus">
+			<label class="form-label" for="ruche" th:text="#{ruche}"></label> <select
 				class="form-control" th:field="*{ruche}">
 				<option value="" th:text="#{aucune}"></option>
 				<option th:each="rucheopt : ${ruches}" th:value="${rucheopt.id}"
 					th:text="${rucheopt.nom}"></option>
 			</select>
 		</div>
-		<div class="form-group toggleplus">
-			<label for="rucher" th:text="#{rucher}"></label> <select
+		<div class="mb-3 toggleplus">
+			<label class="form-label" for="rucher" th:text="#{rucher}"></label> <select
 				class="form-control" th:field="*{rucher}">
 				<option value="" th:text="#{aucun}"></option>
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
