--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -46,8 +46,8 @@
 		method="post" id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="RUCHECADRE"/>
 		<div th:insert="includeForm :: date"></div>
-		<div class="form-group">
-			<label th:text="#{nbCadres}+' ('+${ruche.type.nbCadresMax}+'max)'" for="valeur"></label>
+		<div class="mb-3">
+			<label class="form-label" th:text="#{nbCadres}+' ('+${ruche.type.nbCadresMax}+'max)'" for="valeur"></label>
 			<input class="form-control" type="text" id="valeur" name="valeur"/>
   		</div>
 		<div th:insert="includeForm :: commentaire"></div>
