--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -63,15 +63,15 @@
 			th:field="*{essaim}" /> <input type="hidden" th:field="*{rucher}" />
 		<div th:insert="includeForm :: nomField"></div>
 		<div th:insert="includeForm :: activeField"></div>
-		<div class="form-group">
-			<label for="poidsVide" th:text="#{poidskg}"></label>
+		<div class="mb-3">
+			<label class="form-label" for="poidsVide" th:text="#{poidskg}"></label>
 			<input class="form-control" 
 				type="number" step="0.001" min="0" max="80"
 				th:field="*{poidsVide}" th:errorclass="fieldError" />
 				
 		</div>
-		<div class="form-group">
-			<label for="type" th:text="#{type}"></label> <select
+		<div class="mb-3">
+			<label class="form-label" for="type" th:text="#{type}"></label> <select
 				class="form-control" th:field="*{type}">
 				<option th:each="type : ${rucheTypes}" th:value="${type.id}"
 					th:text="${type.nom}"></option>
