--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -43,8 +43,8 @@
 	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}"
 		method="post" id="evenementForm">
 		<div th:insert="includeForm :: date"></div>
-		<div class="form-group">
-			<label for="rucher" th:text="#{rucher}"></label>
+		<div class="mb-3">
+			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
 			<select class="form-control"
 				id="rucherId" name="rucherId" th:field="${ruche.rucher}">
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
