--- a/src/main/resources/templates/rucher/rucherForm.html
+++ b/src/main/resources/templates/rucher/rucherForm.html
@@ -45,8 +45,8 @@
 			th:field="*{depot}" />
 		<div th:insert="includeForm :: nomField"></div>
 		<div th:insert="includeForm :: actifField"></div>
-		<div class="form-group">
-			<label for="contact" th:text="#{contact}"></label> <select
+		<div class="mb-3">
+			<label class="form-label" for="contact" th:text="#{contact}"></label> <select
 				class="form-control" th:field="*{contact}">
 				<option th:each="personne : ${personnes}" th:value="${personne.id}"
 					th:text="${personne.nom}"></option>
@@ -54,19 +54,19 @@
 		</div>
 		<div th:insert="includeForm :: latitudeField"></div>
 		<div th:insert="includeForm :: longitudeField"></div>
-		<div class="form-group">
-			<label for="altitude" th:text="#{altitude}"></label>
+		<div class="mb-3">
+			<label class="form-label" for="altitude" th:text="#{altitude}"></label>
 			<input class="form-control"
 				type="number" step="1" min="-200" max="4000"
 				th:field="*{altitude}" th:errorclass="fieldError" />
 		</div>
-		<div class="form-group">
-			<label for="adresse" th:text="#{adresse}"></label> <input type="text"
+		<div class="mb-3">
+			<label class="form-label" for="adresse" th:text="#{adresse}"></label> <input type="text"
 				class="form-control" th:field="*{adresse}"
 				th:errorclass="fieldError" maxlength="255" />
 		</div>
-		<div class="form-group">
-			<label for="ressource" th:text="#{ressource}"></label> <input
+		<div class="mb-3">
+			<label class="form-label" for="ressource" th:text="#{ressource}"></label> <input
 				type="text" class="form-control" th:field="*{ressource}"
 				th:errorclass="fieldError" />
 		</div>
