--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -41,10 +41,10 @@
 		method="post" id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement"
 			value="ESSAIMSUCRE" />
-		<div th:insert="includeForm :: date"></div>
-		<div th:insert="includeForm :: poidskg"></div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: date"></div>
+		<div th:replace="includeForm :: poidskg"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
