--- a/src/main/resources/templates/parametresForm.html
+++ b/src/main/resources/templates/parametresForm.html
@@ -26,7 +26,7 @@
 			<input class="form-control datepicker" type="text" id="date" name="date" />
 		</div>
 		<br/>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
