--- a/src/main/resources/templates/ruche/rucheCommentaireForm.html
+++ b/src/main/resources/templates/ruche/rucheCommentaireForm.html
@@ -41,9 +41,9 @@
 		method="post" id="evenementForm">		
 		<input type="hidden" id="valeur" name="valeur"/>
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHE"/>
-		<div th:insert="includeForm :: date"></div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: date"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
