--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -42,7 +42,7 @@
     </div>
 	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}"
 		method="post" id="evenementForm">
-		<div th:insert="includeForm :: date"></div>
+		<div th:replace="includeForm :: date"></div>
 		<div class="mb-3">
 			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
 			<select class="form-control"
@@ -51,8 +51,8 @@
 							th:text="${rucheropt.nom}"></option>
 			</select>
 		</div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
