--- a/src/main/resources/templates/ruche/rucheTypeForm.html
+++ b/src/main/resources/templates/ruche/rucheTypeForm.html
@@ -43,13 +43,13 @@
 	<form action="#" th:action="@{/rucheType/sauve}"
 		th:object="${rucheType}" method="post" id="rucheTypeForm">
 		<input type="hidden" th:field="*{id}" />
-		<div th:insert="includeForm :: nomField"></div>
+		<div th:replace="includeForm :: nomField"></div>
 		<div class="mb-3">
 			<label class="form-label" for="nbCadresMax" th:text="#{nbCadresMax}"></label> <input
 				class="form-control" type="number" th:field="*{nbCadresMax}"
 				th:errorclass="fieldError" id="nbCadresMax" name="nbCadresMax" />
 		</div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
