--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -57,39 +57,41 @@
 	<form action="#" th:action="@{/essaim/sauve}" th:object="${essaim}"
 		method="post" id="essaimForm">
 		<input class="form-control" type="hidden" th:field="*{id}" />
-		<div th:insert="includeForm :: nomField"></div>
+		<div th:replace="includeForm :: nomField"></div>
 		<div class="mb-3 form-check">
 			<input class="form-check-input" type="checkbox"
 				th:field="*{reineMarquee}" /> <label class="form-check-label"
 				for="reineMarquee" th:text="#{reineMarquee}"></label>
 		</div>
-		<div class="mb-3">
-			<label class="form-label" th:text="#{reineDateNaissance}" for="reineDateNaissance"></label>
-			<input class="form-control" type="text"
+		<div class="form-floating mb-3">
+			<input class="form-control" type="text" placeholder="2021-03-26"
 				th:field="*{reineDateNaissance}" th:errorclass="fieldError" />
+			<label class="form-label" th:text="#{reineDateNaissance}" for="reineDateNaissance"></label>
+			
 		</div>
-		<div th:insert="includeForm :: actifField"></div>
-		<div th:insert="includeForm :: dateAcquisitionField"></div>
-		<div th:insert="includeForm :: commentaireField"></div>
-		<div class="mb-3">
-			<label class="form-label" for="essaim" th:text="#{souche}"></label> <select
+		<div th:replace="includeForm :: actifField"></div>
+		<div th:replace="includeForm :: dateAcquisitionField"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div class="form-floating mb-3">
+			<select
 				class="form-control" th:field="*{souche}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
 			</select>
+			<label class="form-label" for="essaim" th:text="#{souche}"></label>
 		</div>
-		<div class="mb-3">
-			<label class="form-label" th:text="#{agressivite}" for="agressivite"></label> 
+		<div class="form-floating mb-3">
 			<input class="form-control" type="number" min="1" max="5" 
-				th:field="*{agressivite}" />
+				th:field="*{agressivite}" placeholder="1"/>
+			<label class="form-label" th:text="#{agressivite}" for="agressivite"></label> 
 		</div>
-		<div class="mb-3">
-			<label class="form-label" th:text="#{proprete}" for="proprete"></label> 
+		<div class="form-floating mb-3">
 			<input class="form-control" type="number" min="1" max="5"
-				th:field="*{proprete}" />
+				th:field="*{proprete}" placeholder="1"/>
+			<label class="form-label" th:text="#{proprete}" for="proprete"></label> 
 		</div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
