--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -55,7 +55,7 @@
 	<form action="#" th:action="@{/evenement/sauve}"
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" />
-		<div th:insert="includeForm :: dateField"></div>
+		<div th:replace="includeForm :: dateField"></div>
 		<div class="mb-3">
 			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label> <select
 				class="form-control" th:field="*{type}">
@@ -101,8 +101,8 @@
 				class="form-control" type="number" step="0.001"
 				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
 		</div>
-		<div th:insert="includeForm :: commentaireField"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
