--- a/src/main/resources/templates/hausse/hausseRemplissageForm.html
+++ b/src/main/resources/templates/hausse/hausseRemplissageForm.html
@@ -48,13 +48,13 @@
 		method="post" id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement"
 			value="HAUSSEREMPLISSAGE" />
-		<div th:insert="includeForm :: date"></div>
+		<div th:replace="includeForm :: date"></div>
 		<div class="mb-3">
 			<label class="form-label" th:text="#{remplissage}" for="valeur"></label> <input
 				class="form-control" type="number" id="valeur" name="valeur" />
 		</div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
