--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -28,10 +28,11 @@
 				class="form-control" type="number" step="0.001" id="valeur"
 				name="valeur" />
 		</div>
-		<div th:fragment="nomField" class="mb-3">
-			<label class="form-label" for="nom" th:text="#{nom}"></label> <input
+		<div th:fragment="nomField" class="form-floating mb-3">
+			<input placeholder="xx"
 				class="form-control" type="text" th:field="*{nom}"
 				maxlength="92" th:errorclass="fieldError" />
+			<label class="form-label" for="nom" th:text="#{nom}"></label> 
 		</div>
 		<div th:fragment="activeField" class="form-check">
 			<input class="form-check-input" type="checkbox" th:field="*{active}" />
@@ -52,32 +53,34 @@
 				class="form-control datepicker" type="text"
 				th:field="*{date}" th:errorclass="fieldError" />
 		</div>
-		<div th:fragment="dateAcquisitionField" class="mb-3">
-			<label class="form-label" th:text="#{dateAcquisition}" for="dateAcquisition"></label> <input
+		<div th:fragment="dateAcquisitionField" class="form-floating mb-3">
+			<input placeholder="2021-03-26"
 				class="form-control" type="text" th:field="*{dateAcquisition}"
 				th:errorclass="fieldError" />
+			<label class="form-label" th:text="#{dateAcquisition}" for="dateAcquisition"></label> 
 		</div>
-		<div th:fragment="commentaireField" class="mb-3">
-			<label class="form-label" th:text="#{commentaire}" for="commentaire"></label><br />
+		<div th:fragment="commentaireField" class="form-floating mb-3">	
 			<textarea class="form-control" th:field="*{commentaire}"
+				 placeholder="Commentaire"
 				th:errorclass="fieldError" maxlength="255"></textarea>
+			<label class="form-label" th:text="#{commentaire}" for="commentaire"></label>
 		</div>
 		<div th:fragment="commentaire" class="mb-3">
 			<label class="form-label" for="commentaire" th:text="#{commentaire}"></label>
 			<textarea class="form-control" id="commentaire" name="commentaire"
 				cols="35"></textarea>
 		</div>
-		<div th:fragment="latitudeField" class="mb-3">
-			<label class="form-label" for="latitude" th:text="#{latitude}"></label>
-			<input class="form-control" 
+		<div th:fragment="latitudeField" class="form-floating mb-3">
+			<input class="form-control" placeholder="43,490837"
 				type="number" step="any" min="-90" max="90"
 				th:field="*{latitude}" th:errorclass="fieldError" />
+			<label class="form-label" for="latitude" th:text="#{latitude}"></label>
 		</div>
-		<div th:fragment="longitudeField" class="mb-3">
-			<label class="form-label" for="longitude" th:text="#{longitude}"></label>
-			<input class="form-control"
+		<div th:fragment="longitudeField" class="form-floating mb-3">
+			<input class="form-control" placeholder="5,491045"
 				type="number" step="any" min="-180" max="180"
 				th:field="*{longitude}" th:errorclass="fieldError" />
+			<label class="form-label" for="longitude" th:text="#{longitude}"></label>
 		</div>
 		<div th:fragment="BtnForm" class="mb-3">
 			<input class="btn btn-primary" type="submit"
