--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -61,27 +61,27 @@
 		method="post" id="rucheForm">
 		<input type="hidden" th:field="*{id}" /> <input type="hidden"
 			th:field="*{essaim}" /> <input type="hidden" th:field="*{rucher}" />
-		<div th:insert="includeForm :: nomField"></div>
-		<div th:insert="includeForm :: activeField"></div>
-		<div class="mb-3">
-			<label class="form-label" for="poidsVide" th:text="#{poidskg}"></label>
-			<input class="form-control" 
+		<div th:replace="includeForm :: nomField"></div>
+		<div th:replace="includeForm :: activeField"></div>
+		<div class="form-floating mb-3">
+			<input class="form-control" placeholder="15.000"
 				type="number" step="0.001" min="0" max="80"
 				th:field="*{poidsVide}" th:errorclass="fieldError" />
-				
+			<label class="form-label" for="poidsVide" th:text="#{poidskg}"></label>
 		</div>
-		<div class="mb-3">
-			<label class="form-label" for="type" th:text="#{type}"></label> <select
+		<div class="form-floating mb-3">
+			<select
 				class="form-control" th:field="*{type}">
 				<option th:each="type : ${rucheTypes}" th:value="${type.id}"
 					th:text="${type.nom}"></option>
 			</select>
+			<label class="form-label" for="type" th:text="#{type}"></label> 
 		</div>
-		<div th:insert="includeForm :: dateAcquisitionField"></div>
-		<div th:insert="includeForm :: latitudeField"></div>
-		<div th:insert="includeForm :: longitudeField"></div>
-		<div th:insert="includeForm :: commentaireField"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: dateAcquisitionField"></div>
+		<div th:replace="includeForm :: latitudeField"></div>
+		<div th:replace="includeForm :: longitudeField"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
