--- a/src/main/resources/templates/ruche/ruchePeseeForm.html
+++ b/src/main/resources/templates/ruche/ruchePeseeForm.html
@@ -45,10 +45,10 @@
 	<form action="#" th:action="@{'/evenement/essaim/sauve/'+${ruche.essaim.id}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="RUCHEPESEE" />
-		<div th:insert="includeForm :: date"></div>
-		<div th:insert="includeForm :: poidskg"></div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: date"></div>
+		<div th:replace="includeForm :: poidskg"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
