--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -38,9 +38,9 @@
     </div>
 	<form action="#" th:action="@{'/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausse.id}}"
 		method="post" id="evenementForm">
-		<div th:insert="includeForm :: date"></div>
-		<div th:insert="includeForm :: commentaire"></div>
-		<div th:insert="includeForm :: BtnForm"></div>
+		<div th:replace="includeForm :: date"></div>
+		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
 </body>
